Correção na conexão de banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=entregas
 
 # Configurações do banco de dados PostgreSQL
-spring.datasource.url=jdbc:postgresql://147.79.107.77:5432/users
+spring.datasource.url=jdbc:postgresql://147.79.107.77:5432/entregas
 spring.datasource.username=dba
 spring.datasource.password=Dba12271000
 
